solved console error
-- solved issue in blog detail, blog grid, shop page

--- a/assets/pug/layout/header/header.pug
+++ b/assets/pug/layout/header/header.pug
@@ -1,6 +1,6 @@
 // Page Header start
 header.fixed.top-0(class="z-[6] xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto")
-  div.page-header(class="w-full transition-all bg-white shadow-header dark:bg-sidebar-dark")
+  div.page-header(class="transition-all bg-white shadow-header dark:bg-sidebar-dark")
     div(class="py-[11px] flex items-center xl:relative justify-between px-body-space")
       div.left-header.flex.items-center.gap-2 
         button.sidebar-toggle.hide 
