--- a/assets/pug/pages/template/blog-detail.pug
+++ b/assets/pug/pages/template/blog-detail.pug
@@ -30,7 +30,7 @@ doctype html
 html(lang='en')  
   include ../../layout/header-files 
   body(dir="ltr" class="unique-skin") 
-    main.page-wrapper
+    main.page-wrapper.relative
       div.page-body-wrapper(class="xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300")
         include ../../layout/header/header     
         // Sidebar Start 
