--- a/html/template/shop.html
+++ b/html/template/shop.html
@@ -1,5 +1,4 @@
-
-<!-- -var gridListView=true;--><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en"> 
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -24,11 +23,11 @@
     <link rel="stylesheet" href="../../assets/css/style.css">
   </head>
   <body class="unique-skin" dir="ltr">
-    <main class="page-wrapper"> 
+    <main class="page-wrapper relative"> 
       <div class="page-body-wrapper xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300">
         <!-- Page Header start-->
         <header class="fixed top-0 z-[6] xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto">
-          <div class="page-header w-full transition-all bg-white shadow-header dark:bg-sidebar-dark">
+          <div class="page-header transition-all bg-white shadow-header dark:bg-sidebar-dark">
             <div class="py-[11px] flex items-center xl:relative justify-between px-body-space">
               <div class="left-header flex items-center gap-2"> 
                 <button class="sidebar-toggle hide"> 
@@ -1019,7 +1018,7 @@
         <!-- Sidebar End -->
         <!-- Page Body Start-->
         <div class="page-body"> 
-          <div class="grid grid-cols-12 gap-card-gap">
+          <div class="grid grid-cols-12 gap-card-gap"> 
             <div class="col-span-12">
               <div class="rounded-5 overflow-hidden relative"><img class="w-full drop-shadow-lg min-h-[120px] max-h-[300px]" src="../../assets/images/ecommerce/light-berner.jpg" alt="light-banner.jpg">
                 <div class="absolute text-center top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full max-w-[40%] lg:max-w-[75%] xl:max-w-[50%]">
@@ -1044,7 +1043,7 @@
               </div>
               <div class="flex items-center gap-3"> 
                 <div class="product-filter"> 
-                  <svg class="w-6 h-6 stroke-content3 xl:block hidden shop-toggle"> 
+                  <svg class="w-6 h-6 stroke-content3 lg:block hidden shop-toggle"> 
                     <use href="../../assets/svg/sprite.svg#Filter"> </use>
                   </svg>
                 </div>
@@ -1057,7 +1056,7 @@
                 <div class="card-header"> 
                   <div class="flex items-center justify-between w-full"> 
                     <h2 class="font-bold text-title">Filters</h2>
-                    <button class="hidden p-1 rounded-full sm:p-1 shop-close-sidebar xl:block"><i class="w-4 h-4" data-feather="x"></i></button>
+                    <button class="hidden p-1 rounded-full sm:p-1 shop-close-sidebar lg:block"><i class="w-4 h-4" data-feather="x"></i></button>
                   </div>
                 </div>
                 <div class="card-body flex flex-col gap-1">
@@ -1266,9 +1265,9 @@
                 </div>
               </div>
             </div>
-            <div class="col-span-9 2xl:col-span-8 xl:col-span-12 product-wrapper-grid">
+            <div class="col-span-9 2xl:col-span-8 lg:col-span-12 product-wrapper-grid">
               <ul class="grid grid-cols-12 gap-6 sm:mt-5"> 
-                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 xl:col-span-4 md:col-span-6 sm:col-span-12 product-box">
+                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 lg:col-span-4 2lg:col-span-6 sm:col-span-12 product-box">
                   <div class="card p-3 scale-0 hover:transition-all hover:ease-in-out group hover:scale-105 transform-none"> 
                     <div class="card-body">
                       <div class="relative"><span class="badge bg-secondary badge-xs absolute font-bold top-3 right-3.5 rounded-[3px] text-2xs">Sale</span>
@@ -1308,7 +1307,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 xl:col-span-4 md:col-span-6 sm:col-span-12 product-box">
+                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 lg:col-span-4 2lg:col-span-6 sm:col-span-12 product-box">
                   <div class="card p-3 scale-0 hover:transition-all hover:ease-in-out group hover:scale-105 transform-none"> 
                     <div class="card-body">
                       <div class="relative">
@@ -1348,7 +1347,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 xl:col-span-4 md:col-span-6 sm:col-span-12 product-box">
+                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 lg:col-span-4 2lg:col-span-6 sm:col-span-12 product-box">
                   <div class="card p-3 scale-0 hover:transition-all hover:ease-in-out group hover:scale-105 transform-none"> 
                     <div class="card-body">
                       <div class="relative"><span class="badge bg-secondary badge-xs absolute font-bold top-3 right-3.5 rounded-[3px] text-2xs">50% off</span>
@@ -1388,7 +1387,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 xl:col-span-4 md:col-span-6 sm:col-span-12 product-box">
+                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 lg:col-span-4 2lg:col-span-6 sm:col-span-12 product-box">
                   <div class="card p-3 scale-0 hover:transition-all hover:ease-in-out group hover:scale-105 transform-none"> 
                     <div class="card-body">
                       <div class="relative">
@@ -1428,7 +1427,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 xl:col-span-4 md:col-span-6 sm:col-span-12 product-box">
+                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 lg:col-span-4 2lg:col-span-6 sm:col-span-12 product-box">
                   <div class="card p-3 scale-0 hover:transition-all hover:ease-in-out group hover:scale-105 transform-none"> 
                     <div class="card-body">
                       <div class="relative">
@@ -1468,7 +1467,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 xl:col-span-4 md:col-span-6 sm:col-span-12 product-box">
+                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 lg:col-span-4 2lg:col-span-6 sm:col-span-12 product-box">
                   <div class="card p-3 scale-0 hover:transition-all hover:ease-in-out group hover:scale-105 transform-none"> 
                     <div class="card-body">
                       <div class="relative">
@@ -1508,7 +1507,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 xl:col-span-4 md:col-span-6 sm:col-span-12 product-box">
+                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 lg:col-span-4 2lg:col-span-6 sm:col-span-12 product-box">
                   <div class="card p-3 scale-0 hover:transition-all hover:ease-in-out group hover:scale-105 transform-none"> 
                     <div class="card-body">
                       <div class="relative"><span class="badge bg-secondary badge-xs absolute font-bold top-3 right-3.5 rounded-[3px] text-2xs">Sale</span>
@@ -1548,7 +1547,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 xl:col-span-4 md:col-span-6 sm:col-span-12 product-box">
+                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 lg:col-span-4 2lg:col-span-6 sm:col-span-12 product-box">
                   <div class="card p-3 scale-0 hover:transition-all hover:ease-in-out group hover:scale-105 transform-none"> 
                     <div class="card-body">
                       <div class="relative">
@@ -1588,7 +1587,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 xl:col-span-4 md:col-span-6 sm:col-span-12 product-box">
+                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 lg:col-span-4 2lg:col-span-6 sm:col-span-12 product-box">
                   <div class="card p-3 scale-0 hover:transition-all hover:ease-in-out group hover:scale-105 transform-none"> 
                     <div class="card-body">
                       <div class="relative"><span class="badge bg-secondary badge-xs absolute font-bold top-3 right-3.5 rounded-[3px] text-2xs">12% off</span>
@@ -1628,7 +1627,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 xl:col-span-4 md:col-span-6 sm:col-span-12 product-box">
+                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 lg:col-span-4 2lg:col-span-6 sm:col-span-12 product-box">
                   <div class="card p-3 scale-0 hover:transition-all hover:ease-in-out group hover:scale-105 transform-none"> 
                     <div class="card-body">
                       <div class="relative">
@@ -1668,7 +1667,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 xl:col-span-4 md:col-span-6 sm:col-span-12 product-box">
+                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 lg:col-span-4 2lg:col-span-6 sm:col-span-12 product-box">
                   <div class="card p-3 scale-0 hover:transition-all hover:ease-in-out group hover:scale-105 transform-none"> 
                     <div class="card-body">
                       <div class="relative">
@@ -1708,7 +1707,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 xl:col-span-4 md:col-span-6 sm:col-span-12 product-box">
+                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 lg:col-span-4 2lg:col-span-6 sm:col-span-12 product-box">
                   <div class="card p-3 scale-0 hover:transition-all hover:ease-in-out group hover:scale-105 transform-none"> 
                     <div class="card-body">
                       <div class="relative">
@@ -1748,7 +1747,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 xl:col-span-4 md:col-span-6 sm:col-span-12 product-box">
+                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 lg:col-span-4 2lg:col-span-6 sm:col-span-12 product-box">
                   <div class="card p-3 scale-0 hover:transition-all hover:ease-in-out group hover:scale-105 transform-none"> 
                     <div class="card-body">
                       <div class="relative"><span class="badge bg-secondary badge-xs absolute font-bold top-3 right-3.5 rounded-[3px] text-2xs">25% off</span>
@@ -1788,7 +1787,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 xl:col-span-4 md:col-span-6 sm:col-span-12 product-box">
+                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 lg:col-span-4 2lg:col-span-6 sm:col-span-12 product-box">
                   <div class="card p-3 scale-0 hover:transition-all hover:ease-in-out group hover:scale-105 transform-none"> 
                     <div class="card-body">
                       <div class="relative">
@@ -1828,7 +1827,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 xl:col-span-4 md:col-span-6 sm:col-span-12 product-box">
+                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 lg:col-span-4 2lg:col-span-6 sm:col-span-12 product-box">
                   <div class="card p-3 scale-0 hover:transition-all hover:ease-in-out group hover:scale-105 transform-none"> 
                     <div class="card-body">
                       <div class="relative">
@@ -1868,7 +1867,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 xl:col-span-4 md:col-span-6 sm:col-span-12 product-box">
+                <li class="col-span-3 4xl:col-span-4 2xl:col-span-6 lg:col-span-4 2lg:col-span-6 sm:col-span-12 product-box">
                   <div class="card p-3 scale-0 hover:transition-all hover:ease-in-out group hover:scale-105 transform-none"> 
                     <div class="card-body">
                       <div class="relative">
@@ -2105,6 +2104,8 @@
   <script src="../../assets/js/fontawesome/all.min.js"></script>
   <!-- customizer js-->
   <script src="../../assets/js/customizer.js"> </script>
+  <!-- gridListView js-->
+  <script src="../../assets/js/grid-list-view.js"> </script>
   <!-- Custom script   -->
   <script src="../../assets/js/script.js">  </script>
 </html>
