--- a/assets/postcss/components/_layout.css
+++ b/assets/postcss/components/_layout.css
@@ -40,16 +40,16 @@
           @apply w-full;
           header{
             @apply w-full;
-          }
-          /* .page-header{
-            @apply ml-[4.8125rem] rtl:!ml-unset rtl:!mr-[4.8125rem];
+            .page-header {
+              @apply lg:ml-0 rtl:lg:ml-unset rtl:lg:!mr-0;
+            }
           }
           .page-body{
-            @apply ml-[calc(65px_+_(90_-_65)_*_((100vw_-_320px)_/_(1920_-_320)))] rtl:!ml-unset rtl:!mr-[calc(65px_+_(90_-_65)_*_((100vw_-_320px)_/_(1920_-_320)))] transition-all duration-500;
+            @apply lg:ml-0 rtl:lg:ml-unset rtl:lg:!mr-0;
           }
-          .page-footer{
-            @apply ml-[4.8125rem] rtl:!ml-unset rtl:!mr-[4.8125rem] w-[calc(100%_-_77px)];
-          } */
+          .page-footer {
+            @apply lg:ml-0 rtl:lg:ml-unset rtl:lg:!mr-0 lg:w-full;
+          }
         }
         .page-sidebar {
           nav {
@@ -66,7 +66,7 @@
                   }
                 }
                 .sidebar-submenu{
-                  @apply invisible absolute !pl-[47px] pt-5 left-0 top-0 bottom-0 z-[-1] !m-0 translate-x-0 !block h-full w-[250px] transform bg-sidebar-dark opacity-0 transition-all;
+                  @apply invisible absolute !pl-[47px] rtl:!pr-[47px] rtl:pl-unset rtl:left-unset rtl:right-0 pt-5 left-0 top-0 bottom-0 z-[-1] !m-0 translate-x-0 !block h-full w-[250px] transform bg-sidebar-dark opacity-0 transition-all;
                   li{
                     &:hover{
                       a{
@@ -79,7 +79,7 @@
                     a{
                       @apply relative text-content-white;
                       &:after{                    
-                        @apply content-[""] left-[-18px] absolute top-1/2 h-[2px] w-[0.375rem] translate-y-1/2 transform bg-content2;
+                        @apply content-[""] left-[-18px] rtl:left-unset rtl:right-[-18px] absolute top-1/2 h-[2px] w-[0.375rem] translate-y-1/2 transform bg-content2;
                       }
                       &.active{
                         @apply text-white after:bg-white;
@@ -89,7 +89,7 @@
                 }
                   &:hover{
                     .sidebar-submenu{
-                    @apply visible opacity-100 transform transition-all translate-x-[30%];
+                    @apply min-lg:visible  min-lg:opacity-100 min-lg:transform min-lg:transition-all min-lg:translate-x-[30%] min-lg:rtl:translate-x-[-30%];
                   }
                 }
               }
@@ -113,6 +113,73 @@
             .search-box {
               .search{
                 @apply pl-7;
+              }
+            }
+          }
+        }
+        .page-sidebar {
+          &.unique-sidebar{
+            @apply left-0 lg:left-[-62.4375rem] rtl:left-unset rtl:right-0 rtl:lg:right-[-62.4375rem];
+            &.hide-show-sidebar{
+              @apply left-0 w-[14.375rem] rtl:left-unset rtl:right-0;
+              .logo-wrapper {
+                @apply justify-between;
+                a{
+                  .full-sidebar{
+                    @apply lg:block;
+                  }
+                  .icon-sidebar{
+                    @apply hidden;
+                  }
+                }
+                .sidebar-btn{
+                  @apply lg:block
+                }
+              }
+              .search-wrapper{
+                @apply px-[1.125rem] pt-[1.125rem];
+                .search-box{
+                  .search{
+                    @apply pl-[2.75rem] rtl:pl-unset rtl:pr-[2.75rem];
+                  }
+                  svg{
+                    @apply rtl:left-unset rtl:right-[0.75rem];
+                  }
+                }
+              }
+              nav {
+                ul {
+                  .title{
+                    @apply block;
+                  }
+                  .sidebar-list {
+                    a {
+                      span {
+                        .sidebar-name{
+                          @apply !flex;
+                        }
+                      }
+                    }
+                    .sidebar-submenu{
+                      @apply lg:!translate-x-0 lg:!transform-none lg:!transition-transform;
+                    }
+                    &.active{
+                      .sidebar-submenu{
+                        @apply !flex visible opacity-100 static flex-col gap-[.5rem] transition-all ease-in-out rtl:!pr-[1.375rem] !pl-[1.375rem] rtl:!pl-unset !ml-[.5625rem] rtl:!ml-unset rtl:!mr-[0.5625rem] !mt-[.9375rem] border-l-2 rtl:border-l-0 rtl:border-r-2 border-border-dark !w-auto pt-0;
+                        li{
+                          &:not(:first-of-type){
+                            @apply mt-0;
+                          }
+                          a{
+                            &:after{
+                              @apply hidden;
+                            }
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
               }
             }
           }
