--- a/assets/postcss/layout/_sidebar.css
+++ b/assets/postcss/layout/_sidebar.css
@@ -21,14 +21,14 @@
           }
         }
         .search-wrapper {
-          @apply px-[1.4375rem] 4xl:p-[1.125rem] pt-[1.25rem] 4xl:pt-[1.125rem];
+          @apply px-[1.4375rem] 4xl:p-[1.125rem] pt-[1.25rem] 4xl:pt-[1.125rem] 4xl:pb-0;
           .search-box {
             @apply relative;
             .search {
               @apply py-3 4xl:py-2 pl-11 pr-3 w-full  rounded-5;
             }
             svg {
-              @apply absolute top-1/2 left-3 -translate-y-1/2;
+              @apply absolute top-1/2 left-3 rtl:left-unset rtl:right-3 -translate-y-1/2;
             }
           }
         }
@@ -57,10 +57,10 @@
                 }
               }
               .sidebar-submenu {
-                @apply hidden flex-col gap-[.5rem] pl-[1.375rem] mt-[.9375rem] border-l-2 border-border-dark  ml-[.5625rem];
+                @apply hidden flex-col gap-[.5rem] pl-[1.375rem] rtl:!pr-[1.375rem] rtl:!pl-unset mt-[.9375rem] border-l-2 rtl:border-l-0 rtl:border-r-2 border-border-dark rtl:ml-unset rtl:mr-[.5625rem] ml-[.5625rem];
 
                 a {
-                  @apply text-xs text-content font-medium;
+                  @apply text-xs text-content font-medium; 
                 }
               }
               &.active {
