--- a/assets/pug/layout/footer-files.pug
+++ b/assets/pug/layout/footer-files.pug
@@ -40,14 +40,19 @@ if (apexChart)
     script(src='../../assets/js/apexchart/apex-common.js')
     if (uniqueApex)
         script(src='../../assets/js/apexchart/unique-custom.js')
-    if (friendlyApex)
-        script(src='../../assets/js/apexchart/friendly-custom.js')
-    if (minimalApex)
-        script(src='../../assets/js/apexchart/minimal-custom.js')
-    if (materialApex)
-        script(src='../../assets/js/apexchart/material-custom.js')
+    if (ecommerceApex)
+        script(src='../../assets/js/apexchart/ecommerce-custom.js')
+    //- if (friendlyApex)
+    //-     script(src='../../assets/js/apexchart/friendly-custom.js')
+    //- if (minimalApex)
+    //-     script(src='../../assets/js/apexchart/minimal-custom.js')
+    //- if (materialApex)
+    //-     script(src='../../assets/js/apexchart/material-custom.js')
     if(customApexChart)
         script(src='../../assets/js/apexchart/custom-apex-charts.js')
+    if(widgetApex)
+        script(src='../../assets/js/apexchart/widget-page.js')
+        
 
 if (prism)
     // prism js
