--- a/html/template/blog-grid.html
+++ b/html/template/blog-grid.html
@@ -21,11 +21,11 @@
     <link rel="stylesheet" href="../../assets/css/style.css">
   </head>
   <body class="unique-skin" dir="ltr"> 
-    <main class="page-wrapper">
+    <main class="page-wrapper relative">
       <div class="page-body-wrapper xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300">
         <!-- Page Header start-->
         <header class="fixed top-0 z-[6] xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto">
-          <div class="page-header w-full transition-all bg-white shadow-header dark:bg-sidebar-dark">
+          <div class="page-header transition-all bg-white shadow-header dark:bg-sidebar-dark">
             <div class="py-[11px] flex items-center xl:relative justify-between px-body-space">
               <div class="left-header flex items-center gap-2"> 
                 <button class="sidebar-toggle hide"> 
