--- a/html/template/monochrome-mode.html
+++ b/html/template/monochrome-mode.html
@@ -27,7 +27,7 @@
       <div class="page-body-wrapper xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300">
         <!-- Page Header start-->
         <header class="fixed top-0 z-[6] xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto">
-          <div class="page-header w-full transition-all bg-white shadow-header dark:bg-sidebar-dark">
+          <div class="page-header transition-all bg-white shadow-header dark:bg-sidebar-dark">
             <div class="py-[11px] flex items-center xl:relative justify-between px-body-space">
               <div class="left-header flex items-center gap-2"> 
                 <button class="sidebar-toggle hide"> 
@@ -1531,9 +1531,6 @@
   <script src="../../assets/js/apexchart/apexcharts.js"></script>
   <script src="../../assets/js/apexchart/apex-common.js"></script>
   <script src="../../assets/js/apexchart/unique-custom.js"></script>
-  <script src="../../assets/js/apexchart/friendly-custom.js"></script>
-  <script src="../../assets/js/apexchart/minimal-custom.js"></script>
-  <script src="../../assets/js/apexchart/material-custom.js"></script>
   <!-- Sidebar Js -->
   <script src="../../assets/js/sidebar.js"></script>
   <!-- customizer js-->
