--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3847,19 +3847,116 @@ main.sidebar-close .page-footer {
 
 main.sidebar-close.sidebar-icon .page-body-wrapper {
   width: 100%;
-          /* .page-header{
-            @apply ml-[4.8125rem] rtl:!ml-unset rtl:!mr-[4.8125rem];
-          }
-          .page-body{
-            @apply ml-[calc(65px_+_(90_-_65)_*_((100vw_-_320px)_/_(1920_-_320)))] rtl:!ml-unset rtl:!mr-[calc(65px_+_(90_-_65)_*_((100vw_-_320px)_/_(1920_-_320)))] transition-all duration-500;
-          }
-          .page-footer{
-            @apply ml-[4.8125rem] rtl:!ml-unset rtl:!mr-[4.8125rem] w-[calc(100%_-_77px)];
-          } */
 }
 
 main.sidebar-close.sidebar-icon .page-body-wrapper header {
   width: 100%;
+}
+
+@media (max-width: 991px) {
+
+  main.sidebar-close.sidebar-icon .page-body-wrapper header .page-header {
+    margin-left: 0px;
+  }
+
+  [dir=rtl] main.sidebar-close.sidebar-icon .page-body-wrapper header .page-header {
+    margin-left: unset;
+    margin-right: 0px;
+  }
+
+  [dir=rtl] main.sidebar-close.sidebar-icon .page-body-wrapper header .page-header.5 {
+    margin-left: unset;
+    margin-right: 0.125rem;
+  }
+
+  :is([dir="rtl"] main.sidebar-close.sidebar-icon .page-body-wrapper header .page-header) {
+    margin-left: unset;
+    margin-right: 0px !important;
+  }
+
+  [dir=rtl] :is([dir="rtl"] main.sidebar-close.sidebar-icon .page-body-wrapper header .page-header) {
+    margin-left: 0px !important;
+    margin-right: unset !important;
+  }
+
+  [dir=rtl] :is([dir="rtl"] main.sidebar-close.sidebar-icon .page-body-wrapper header .page-header).\35 {
+    margin-left: 0.125rem !important;
+    margin-right: unset !important;
+  }
+
+  [dir=rtl] :is([dir="rtl"] main.sidebar-close.sidebar-icon .page-body-wrapper header .page-header) {
+    margin-left: unset;
+    margin-right: unset;
+  }
+
+  main.sidebar-close.sidebar-icon .page-body-wrapper .page-body {
+    margin-left: 0px;
+  }
+
+  [dir=rtl] main.sidebar-close.sidebar-icon .page-body-wrapper .page-body {
+    margin-left: unset;
+    margin-right: 0px;
+  }
+
+  [dir=rtl] main.sidebar-close.sidebar-icon .page-body-wrapper .page-body.5 {
+    margin-left: unset;
+    margin-right: 0.125rem;
+  }
+
+  :is([dir="rtl"] main.sidebar-close.sidebar-icon .page-body-wrapper .page-body) {
+    margin-left: unset;
+    margin-right: 0px !important;
+  }
+
+  [dir=rtl] :is([dir="rtl"] main.sidebar-close.sidebar-icon .page-body-wrapper .page-body) {
+    margin-left: 0px !important;
+    margin-right: unset !important;
+  }
+
+  [dir=rtl] :is([dir="rtl"] main.sidebar-close.sidebar-icon .page-body-wrapper .page-body).\35 {
+    margin-left: 0.125rem !important;
+    margin-right: unset !important;
+  }
+
+  [dir=rtl] :is([dir="rtl"] main.sidebar-close.sidebar-icon .page-body-wrapper .page-body) {
+    margin-left: unset;
+    margin-right: unset;
+  }
+
+  main.sidebar-close.sidebar-icon .page-body-wrapper .page-footer {
+    margin-left: 0px;
+    width: 100%;
+  }
+
+  [dir=rtl] main.sidebar-close.sidebar-icon .page-body-wrapper .page-footer {
+    margin-left: unset;
+    margin-right: 0px;
+  }
+
+  [dir=rtl] main.sidebar-close.sidebar-icon .page-body-wrapper .page-footer.5 {
+    margin-left: unset;
+    margin-right: 0.125rem;
+  }
+
+  :is([dir="rtl"] main.sidebar-close.sidebar-icon .page-body-wrapper .page-footer) {
+    margin-left: unset;
+    margin-right: 0px !important;
+  }
+
+  [dir=rtl] :is([dir="rtl"] main.sidebar-close.sidebar-icon .page-body-wrapper .page-footer) {
+    margin-left: 0px !important;
+    margin-right: unset !important;
+  }
+
+  [dir=rtl] :is([dir="rtl"] main.sidebar-close.sidebar-icon .page-body-wrapper .page-footer).\35 {
+    margin-left: 0.125rem !important;
+    margin-right: unset !important;
+  }
+
+  [dir=rtl] :is([dir="rtl"] main.sidebar-close.sidebar-icon .page-body-wrapper .page-footer) {
+    margin-left: unset;
+    margin-right: unset;
+  }
 }
 
 main.sidebar-close.sidebar-icon .page-sidebar nav ul .title {
@@ -3891,6 +3988,18 @@ main.sidebar-close.sidebar-icon .page-sidebar nav ul .sidebar-list .sidebar-subm
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+:is([dir="rtl"] main.sidebar-close.sidebar-icon .page-sidebar nav ul .sidebar-list .sidebar-submenu) {
+  left: unset;
+  right: 0px;
+  padding-right: 47px !important;
+  padding-left: unset;
+}
+
+[dir=rtl] :is([dir="rtl"] main.sidebar-close.sidebar-icon .page-sidebar nav ul .sidebar-list .sidebar-submenu) {
+  padding-left: unset;
+  padding-right: unset;
 }
 
 main.sidebar-close.sidebar-icon .page-sidebar nav ul .sidebar-list .sidebar-submenu li:hover a {
@@ -3944,6 +4053,11 @@ main.sidebar-close.sidebar-icon .page-sidebar nav ul .sidebar-list .sidebar-subm
   content: var(--tw-content);
 }
 
+:is([dir="rtl"] main.sidebar-close.sidebar-icon .page-sidebar nav ul .sidebar-list .sidebar-submenu li a):after {
+  left: unset;
+  right: -18px;
+}
+
 main.sidebar-close.sidebar-icon .page-sidebar nav ul .sidebar-list .sidebar-submenu li a.active {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -3955,14 +4069,22 @@ main.sidebar-close.sidebar-icon .page-sidebar nav ul .sidebar-list .sidebar-subm
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-main.sidebar-close.sidebar-icon .page-sidebar nav ul .sidebar-list:hover .sidebar-submenu {
-  visibility: visible;
-  --tw-translate-x: 30%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  opacity: 1;
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+@media (min-width: 991px) {
+
+  main.sidebar-close.sidebar-icon .page-sidebar nav ul .sidebar-list:hover .sidebar-submenu {
+    visibility: visible;
+    --tw-translate-x: 30%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+    opacity: 1;
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+  }
+
+  :is([dir="rtl"] main.sidebar-close.sidebar-icon .page-sidebar nav ul .sidebar-list:hover .sidebar-submenu) {
+    --tw-translate-x: -30%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
 }
 
 main.sidebar-close.sidebar-icon .page-sidebar .logo-wrapper {
@@ -3989,6 +4111,146 @@ main.sidebar-close.sidebar-icon .page-sidebar .search-wrapper .search-box .searc
 [dir=rtl] main.sidebar-close.sidebar-icon .page-sidebar .search-wrapper .search-box .search {
   padding-left: unset;
   padding-right: 1.75rem;
+}
+
+main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar {
+  left: 0px;
+}
+
+:is([dir="rtl"] main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar) {
+  left: unset;
+  right: 0px;
+}
+
+@media (max-width: 991px) {
+
+  main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar {
+    left: -62.4375rem;
+  }
+
+  :is([dir="rtl"] main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar) {
+    right: -62.4375rem;
+  }
+}
+
+main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar.hide-show-sidebar {
+  left: 0px;
+  width: 14.375rem;
+}
+
+:is([dir="rtl"] main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar.hide-show-sidebar) {
+  left: unset;
+  right: 0px;
+}
+
+main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar.hide-show-sidebar .logo-wrapper {
+  justify-content: space-between;
+}
+
+@media (max-width: 991px) {
+
+  main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar.hide-show-sidebar .logo-wrapper a .full-sidebar {
+    display: block;
+  }
+}
+
+main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar.hide-show-sidebar .logo-wrapper a .icon-sidebar {
+  display: none;
+}
+
+@media (max-width: 991px) {
+
+  main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar.hide-show-sidebar .logo-wrapper .sidebar-btn {
+    display: block;
+  }
+}
+
+main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar.hide-show-sidebar .search-wrapper {
+  padding-left: 1.125rem;
+  padding-right: 1.125rem;
+  padding-top: 1.125rem;
+}
+
+main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar.hide-show-sidebar .search-wrapper .search-box .search {
+  padding-left: 2.75rem;
+}
+
+:is([dir="rtl"] main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar.hide-show-sidebar .search-wrapper .search-box .search) {
+  padding-left: unset;
+  padding-right: 2.75rem;
+}
+
+[dir=rtl] :is([dir="rtl"] main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar.hide-show-sidebar .search-wrapper .search-box .search) {
+  padding-left: unset;
+  padding-right: unset;
+}
+
+:is([dir="rtl"] main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar.hide-show-sidebar .search-wrapper .search-box svg) {
+  left: unset;
+  right: 0.75rem;
+}
+
+main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar.hide-show-sidebar nav ul .title {
+  display: block;
+}
+
+main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar.hide-show-sidebar nav ul .sidebar-list a span .sidebar-name {
+  display: flex !important;
+}
+
+@media (max-width: 991px) {
+
+  main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar.hide-show-sidebar nav ul .sidebar-list .sidebar-submenu {
+    --tw-translate-x: 0px !important;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
+    transform: none !important;
+    transition-property: transform !important;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) !important;
+    transition-duration: 150ms !important;
+  }
+}
+
+main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar.hide-show-sidebar nav ul .sidebar-list.active .sidebar-submenu {
+  visibility: visible;
+  position: static;
+  margin-left: .5625rem !important;
+  margin-top: .9375rem !important;
+  display: flex !important;
+  width: auto !important;
+  flex-direction: column;
+  gap: .5rem;
+  border-left-width: 2px;
+  border-color: var(--border-dark);
+  padding-left: 1.375rem !important;
+  padding-top: 0px;
+  opacity: 1;
+  transition-property: all;
+  transition-duration: 150ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+:is([dir="rtl"] main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar.hide-show-sidebar nav ul .sidebar-list.active .sidebar-submenu) {
+  margin-left: unset !important;
+  margin-right: 0.5625rem !important;
+  border-left-width: 0px;
+  border-right-width: 2px;
+  padding-right: 1.375rem !important;
+  padding-left: unset !important;
+}
+
+[dir=rtl] :is([dir="rtl"] main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar.hide-show-sidebar nav ul .sidebar-list.active .sidebar-submenu) {
+  padding-left: unset !important;
+  padding-right: unset !important;
+  margin-left: unset !important;
+  margin-right: unset !important;
+}
+
+main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar.hide-show-sidebar nav ul .sidebar-list.active .sidebar-submenu li:not(:first-of-type) {
+  margin-top: 0px;
+}
+
+main.sidebar-close.sidebar-icon .page-sidebar.unique-sidebar.hide-show-sidebar nav ul .sidebar-list.active .sidebar-submenu li a:after {
+  display: none;
 }
 
 main .page-sidebar .logo-wrapper a .full-sidebar {
@@ -6225,6 +6487,7 @@ header {
   .page-sidebar.unique-sidebar .sidebar .search-wrapper {
     padding: 1.125rem;
     padding-top: 1.125rem;
+    padding-bottom: 0px;
   }
 }
 
@@ -6285,6 +6548,11 @@ header {
   left: 0.75rem;
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+:is([dir="rtl"] .page-sidebar.unique-sidebar .sidebar .search-wrapper .search-box svg) {
+  left: unset;
+  right: 0.75rem;
 }
 
 .page-sidebar.unique-sidebar .sidebar .sidebar-main {
@@ -6362,6 +6630,22 @@ header {
   border-left-width: 2px;
   border-color: var(--border-dark);
   padding-left: 1.375rem;
+}
+
+:is([dir="rtl"] .page-sidebar.unique-sidebar .sidebar .sidebar-main .sidebar-links .sidebar-list .sidebar-submenu) {
+  margin-left: unset;
+  margin-right: .5625rem;
+  border-left-width: 0px;
+  border-right-width: 2px;
+  padding-right: 1.375rem !important;
+  padding-left: unset !important;
+}
+
+[dir=rtl] :is([dir="rtl"] .page-sidebar.unique-sidebar .sidebar .sidebar-main .sidebar-links .sidebar-list .sidebar-submenu) {
+  padding-left: unset !important;
+  padding-right: unset !important;
+  margin-left: unset;
+  margin-right: unset;
 }
 
 .page-sidebar.unique-sidebar .sidebar .sidebar-main .sidebar-links .sidebar-list .sidebar-submenu a {
@@ -7601,7 +7885,15 @@ header {
   padding: 0.75rem;
 }
 
-@media (max-width: 1199px) {
+/* .shop-sidebar,
+  .blog-sidebar {
+    @apply sm:w-[17.875rem] xl:opacity-0 xl:invisible xl:absolute xl:left-[-19.375rem] xl:top-0 xl:transition-all xl:z-[4] xl:duration-1000 xl:translate-x-[-19.375rem] xl:ease-in-out;
+    &.show {
+      @apply opacity-100 visible absolute top-0 left-0 z-[7] transition-all duration-1000 translate-x-0 ease-in-out;
+    }
+  } */
+
+@media (max-width: 991px) {
 
   .shop-sidebar,
   .blog-sidebar {
