--- a/html/template/ecommerce.html
+++ b/html/template/ecommerce.html
@@ -1161,21 +1161,42 @@
             </div>
             <div class="col-span-6 xl:col-span-6 xl3:col-span-12">
               <div class="card gap-0"> 
-                <div class="card-header">
+                <div class="card-header"> 
                   <div class="flex justify-between w-full flex-wrap gap-2 items-center">
-                    <h3 class="text-lg font-bold text-title leading-none">Sales Summary ( Jun 2023)</h3>
-                    <div class="custom-select select-style-1"> 
-                      <select class="capitalize">
-                        <option>19 Aug - 25 Aug</option>
-                        <option>1 Aug - 18 Aug</option>
-                        <option>19 Jul - 30 Aug</option>
-                      </select>
+                    <h3 class="text-lg font-bold leading-none text-title">Sales Summary ( Jun 2023)</h3>
+                    <div class="flex items-center gap-4">
+                      <div class="radialBar-legend">
+                        <div class="w-full px-2"> 
+                          <div class="radialBar-legend-series"><span class="radialBar-legend-marker primary"></span>
+                            <p class="!mt-0 radialBar-legend-text text-3xs text-title">Sales</p>
+                          </div>
+                        </div>
+                        <div class="w-full px-2">
+                          <div class="radialBar-legend-series"><span class="radialBar-legend-marker secondary"></span>
+                            <p class="!mt-0 radialBar-legend-text text-3xs text-title">Orders</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="dropdown on-hover-show"> 
+                        <button class="flex rounded-full items-center justify-center p-[5px] bg-gray-light dark:bg-sidebar-dark2"> 
+                          <svg class="w-[18px] h-[18px] stroke-title"> 
+                            <use href="../../assets/svg/sprite.svg#Setting"> </use>
+                          </svg>
+                        </button>
+                        <div class="dropdown-menu"> 
+                          <ul>
+                            <li><a href="javascript:void(0)">Yearly</a></li>
+                            <li><a href="javascript:void(0)">Monthly</a></li>
+                            <li><a href="javascript:void(0)">Weekly</a></li>
+                          </ul>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
-                <div class="card-body">
-                  <div class="relative"> 
-                    <div id="chart"></div>
+                <div class="card-body"> 
+                  <div class="relative">
+                    <div id="salesSummaryChart"> </div>
                   </div>
                 </div>
               </div>
@@ -1443,8 +1464,35 @@
                     </div>
                   </div>
                 </div>
-                <div class="card-body"> 
-                  <div class="relative"> </div>
+                <div class="card-body">
+                  <div class="relative"></div>
+                  <div class="grid grid-cols-12"> 
+                    <div class="col-span-9 xl:col-span-3 2md:col-span-12">
+                      <div class="custom-data-label apex-custom-text 2md:-mt-[12px] ml-[-40px] 2md:ml-0" id="OrdersStatus"></div>
+                    </div>
+                    <div class="col-span-3 xl:col-span-9 2md:col-span-12"> 
+                      <ul class="flex flex-col gap-[14px] 2md:gap-[8px] 2md:flex-row 2md:flex-wrap">
+                        <li>
+                          <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-success h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Rephrase Words</span></button>
+                        </li>
+                        <li>
+                          <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-danger h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Presentation</span></button>
+                        </li>
+                        <li>
+                          <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-title h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Fill the Gap</span></button>
+                        </li>
+                        <li>
+                          <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-warning h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Drag and Drop</span></button>
+                        </li>
+                        <li>
+                          <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-success h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Quizz</span></button>
+                        </li>
+                        <li>
+                          <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-danger h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Introduction</span></button>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
